--- a/level3_design/Makefile
+++ b/level3_design/Makefile
@@ -4,10 +4,10 @@ TOPLEVEL_LANG ?= verilog
 
 PWD=$(shell pwd)
 
-VERILOG_SOURCES = $(PWD)/               # provide your design path
+VERILOG_SOURCES = $(PWD)/boothmultiply.v             # provide your design path
 
-TOPLEVEL :=           # design file
-MODULE   :=     # test file
+TOPLEVEL :=boothmultiply          # design file
+MODULE   :=test_boothmultiply    # test file
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
 
